--- a/01-HTML-CSS/taak01-Basic-HTML/index.html
+++ b/01-HTML-CSS/taak01-Basic-HTML/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="js/script.js">
 </head>
 <body>
-    <script src="js/script.js"></script>
+    <div>
+        li
+    </div>
 </body>
 </html>
-
 
