--- a/02-Javascript/taak05-Functions-onClick/index.html
+++ b/02-Javascript/taak05-Functions-onClick/index.html
@@ -13,6 +13,9 @@
     <button onclick="maakBlauw()">maak Blauw</button>
     <button onclick="maakRood()">maak Rood</button>
 
+
+    <button onclick="veranderKleur()">maak met parameter Rood</button>
+
     <!-- TODO: maak 3 buttons die veranderKleur aanroepen-->
 
     <script src="js/script.js"></script>
