--- a/02-Javascript/taak07-Arrays-Introductie/index.html
+++ b/02-Javascript/taak07-Arrays-Introductie/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h1>EetCafePadre</h1>
+    <p> ! - casser</p>
     <script src="js/script.js"></script>
 </body>
 </html>
